--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background-color: rgb(48, 105, 230);
     width: 100%;
-    
+    color: white;
     display: block;
     text-align: center;  
     margin-bottom: auto;
