--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -43,6 +43,7 @@ body {
     padding: 5px 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .hover-section {
@@ -53,6 +54,11 @@ body {
         box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
         transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     }
+}
+
+.carousel-inner {
+    width: 100%;
+    height: 600px !important;
 }
 
 .leaflet-container {
@@ -70,3 +76,5 @@ pre {
 @import "./mappa";
 @import "./TravelAgency.scss";
 @import "./infoSection";
+@import "./timeline";
+@import "./checkuncheck";
