--- a/src/style/_login.scss
+++ b/src/style/_login.scss
@@ -64,6 +64,11 @@
     width: 100%;
     min-height: 100%;
     padding: 20px;
+    margin-top: 5rem;
+
+    .box {
+        padding: 5rem 0;
+    }
 
     #formContent {
         -webkit-border-radius: 10px 10px 10px 10px;
@@ -80,7 +85,8 @@
     }
 
     #formFooter {
-        background-color: #f6f6f6;
+        color: #6c5d56;
+        background-color: #c0b7ae;
         border-top: 1px solid #dce8f1;
         padding: 25px;
         text-align: center;
@@ -90,7 +96,8 @@
 }
 
 .submitBtn {
-    background-color: #56baed;
+    // background-color: #56baed;
+    background-color: #01656d;
     border: none;
     color: white;
     padding: 15px 80px;
@@ -99,11 +106,11 @@
     display: inline-block;
     text-transform: uppercase;
     font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
-    box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+    -webkit-box-shadow: 0 10px 30px 0 rgba(1, 12, 17, 0.4);
+    box-shadow: 0 10px 30px 0 rgba(1, 13, 19, 0.4);
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 40px 20px;
+    margin: 40px 20px 20px 20px;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
@@ -112,7 +119,7 @@
 }
 
 .submitBtn:hover {
-    background-color: #39ace7;
+    background-color: #00868f;
 }
 
 .submitBtn:active {
@@ -123,7 +130,9 @@
     transform: scale(0.95);
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
+    letter-spacing: 10px;
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
@@ -132,7 +141,7 @@ input[type="text"] {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 5px;
+    margin: 10px;
     width: 85%;
     border: 2px solid #f6f6f6;
     -webkit-transition: all 0.5s ease-in-out;
@@ -144,12 +153,14 @@ input[type="text"] {
     border-radius: 5px 5px 5px 5px;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus,
+input[type="password"]:focus {
     background-color: #fff;
     border-bottom: 2px solid #5fbae9;
 }
 
-input[type="text"]:placeholder {
+input[type="text"]:placeholder,
+input[type="password"]:placeholder {
     color: #cccccc;
 }
 
@@ -254,13 +265,17 @@ input[type="text"]:placeholder {
 }
 
 /* Simple CSS3 Fade-in Animation */
+.underlineHover {
+    color: #6c5d56;
+}
+
 .underlineHover:after {
     display: block;
     left: 0;
     bottom: -10px;
     width: 0;
     height: 2px;
-    background-color: #fc0808;
+    background-color: #01656d;
     content: "";
     transition: width 0.2s;
 }
