--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -1,31 +1,53 @@
-.footer {
-    background-color: rgb(48, 105, 230);
-    width: 100%;
-    color: white;
-    display: block;
-    text-align: center;
-    margin-bottom: auto;
-}
-.sec {
-    padding: 12px;
-    width: 32%;
-    height: 150px;
-    background: rgb(48, 105, 230);
-    display: table-cell;
-}
+// .footer {
+//     background-color: rgb(48, 105, 230);
+//     width: 100%;
+//     color: white;
+//     display: block;
+//     text-align: center;
+//     margin-bottom: auto;
+// }
+// .sec {
+//     padding: 12px;
+//     width: 32%;
+//     height: 150px;
+//     background: rgb(48, 105, 230);
+//     display: table-cell;
+// }
 
-.image {
-    display: block;
-    margin-left: 20%;
-    float: left;
-}
-.bottoneMarcio {
-    background-color: white;
-    border: none;
-    color: rgb(48, 105, 230);
-    padding: 12px 30px;
+// .image {
+//     display: block;
+//     margin-left: 20%;
+//     float: left;
+// }
+// .bottoneMarcio {
+//     background-color: white;
+//     border: none;
+//     color: rgb(48, 105, 230);
+//     padding: 12px 30px;
 
-    font-size: 15px;
-    margin-bottom: 40px;
-    margin-top: 50px;
+//     font-size: 15px;
+//     margin-bottom: 40px;
+//     margin-top: 50px;
+// }
+
+footer {
+    background-color: #c0b7ae;
+    position: relative;
+    height: 250px;
+
+    .footer-left {
+        padding-left: 50px;
+    }
+
+    .btn-footer {
+        background: #ffffff;
+        box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
+        border-radius: 2px;
+        font-weight: bold;
+        color: #01868f;
+    }
+
+    i {
+        margin-right: 7px;
+    }
 }
