--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -34,7 +34,7 @@ body {
 }
 
 .text-blue {
-    color: #0063C9
+    color: #0063c9;
 }
 
 .btn-outline {
@@ -46,28 +46,59 @@ body {
     text-align: center;
 }
 
-.hover-section {
+.cursor-pointer {
     cursor: pointer;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.hover-section {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
     &:hover {
-        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     }
 }
 
-.carousel-inner {
-    width: 100%;
-    height: 600px !important;
+.img-popup {
+    position: relative;
+    min-width: 200px;
+    max-width: 300px;
+
+    .overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        transition: 0.5s ease;
+        background-color: #0000007c;
+
+        p {
+            color: white;
+            font-size: 20px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+    }
+
+    &:hover {
+        .overlay {
+            opacity: 1;
+        }
+    }
 }
 
-.leaflet-container {
-    height: 400px;
-}
-
-pre {
-    white-space: pre-wrap;
-    font-size: smaller;
+.carousel .carousel-item img {
+    max-height: 400px;
+    min-width: auto;
 }
 
 @import "./_login.scss";
