implement gallery view

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -5,9 +5,9 @@ header {
 
         // logo insolita travels
         img {
-            position: absolute;
-            top: 50px;
-            left: 50px;
+            // position: absolute;
+            // top: 50px;
+            // left: 50px;
             width: 132px;
             height: 45px;
         }
