--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,74 +1,105 @@
 * {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #e5e5e5;
+  background-color: #e5e5e5;
 }
 
 .card {
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .title-section {
-    font-size: 25px;
-    line-height: 35px;
+  font-size: 25px;
+  line-height: 35px;
 }
 
 .title-day {
-    font-size: 28px;
-    line-height: 33px;
+  font-size: 28px;
+  line-height: 33px;
 }
 
 .text-grey {
-    color: #9ba7af;
+  color: #9ba7af;
 }
 .text-yellow {
-    color: #ffb400;
+  color: #ffb400;
 }
 .text-black {
-    color: #595a66;
+  color: #595a66;
 }
 
 .text-blue {
-    color: #0063C9
+  color: #0063c9;
 }
 
 .btn-outline {
-    border-radius: 50px;
-    border: 1px solid;
-    padding: 5px 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    text-align: center;
+  border-radius: 50px;
+  border: 1px solid;
+  padding: 5px 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .hover-section {
-    cursor: pointer;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
-    &:hover {
-        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    }
+  &:hover {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  }
 }
 
-.carousel-inner {
+.img-popup {
+  position: relative;
+  min-width: 200px;
+  max-width: 300px;
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
     width: 100%;
-    height: 600px !important;
+    opacity: 0;
+    transition: 0.5s ease;
+    background-color: #0000007c;
+
+    p {
+      color: white;
+      font-size: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
+  }
+
+  &:hover {
+    .overlay {
+      opacity: 1;
+    }
+  }
 }
 
-.leaflet-container {
-    height: 400px;
-}
-
-pre {
-    white-space: pre-wrap;
-    font-size: smaller;
-}
+.carousel .carousel-item img {
+    max-height: 400px;
+    min-width: auto;
+  }
 
 @import "./_login.scss";
 @import "./media-queries";
@@ -78,3 +109,4 @@ pre {
 @import "./infoSection";
 @import "./timeline";
 @import "./checkuncheck";
+@import "./navbar"
